# rusty-flash-knowledge

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  License.txt  README.md  Shuttle.toml
.cargo/: config.toml
app/: Cargo.toml
app/src/: blueprint.rs  configuration.rs  errors.rs  lib.rs  middleware.rs  models.rs  queries.rs  telemetry.rs
app/src/routes/: flashcards.rs  health.rs  index.rs  mod.rs  preflight.rs  static_server.rs
configuration/: base.yml  dev.yml  prod.yml
migrations/: 20250402033312_create_flashcards.down.sql  20250402033312_create_flashcards.up.sql
scripts/: init_db.sh  init_redis.sh
server/: Cargo.toml
server/tests/integration/: create_flashcard.rs  delete_flashcard.rs  health_check.rs  helpers.rs  list_all_tags.rs  list_all_topics.rs  list_flashcard.rs  list_flashcards.rs  list_flashcards_tag.rs  list_flashcards_topic.rs  main.rs  middleware.rs  ping.rs  random_flashcard.rs  update_flashcard.rs
server_sdk/: Cargo.toml
server_sdk/src/: lib.rs
shuttle/: Cargo.toml
shuttle/src/: main.rs
static/: screen.css  scripts.js
static/styles/: screen.css
templates/: base.html  index.html
