[workspace]
members = ["app", "server_sdk", "server", "workspace_hack"]
# By setting `server` as the default member, `cargo run` will default to running the server binary
# when executed from the root of the workspace.
# Otherwise, you would have to use `cargo run --bin server` to run the server binary.
default-members = ["server"]
resolver = "3"

[workspace.package]
version = "0.13.2"
edition = "2024"
description = "A CRUD API to power the backend of a flash card application."
authors = ["Jeffery D Mitchell", "<crusty-rustacean@jeff-mitchell.dev>"]
readme = "README.md"
repository = "https://github.com/sentinel1909/rusty-flash-knowledge.git"
license = "MIT"
publish = false
