[package]
name = "app"
version.workspace = true
edition.workspace = true
description = "The app component of the rusty-flash-knowledge API project."
readme.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[[bin]]
path = "src/bin/bp.rs"
name = "bp"

[lints.rust]
# `pavex_ide_hint` is used in Pavex's `f!` macro to "nudge" the IDE
# and force it to provide completions and "go-to-definition" correctly
# for the paths passed to the `f!` macro.
# It must be allowed in all local crates that use `f!`.
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(pavex_ide_hint)'] }

[dependencies]
cargo_px_env = "0.1"
humantime-serde = "1.1"
jiff-sqlx = { version = "0.1.1", features = ["postgres"] }
pavex = { version = "0.1.80" }
pavex_tracing = { version = "0.1.80" }
pavex_cli_client = { version = "0.1.80" }
tracing = "0.1"
tracing_log_error = "0.1"
secrecy = { version = "0.10.3", features = [ "serde" ] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
sqlx = { version = "0.8.3", features = [ "runtime-tokio", "tls-rustls", "migrate", "uuid", "macros", "time", "postgres" ] }
uuid = { version = "1.16.0", features = ["v4", "serde" ] }
workspace_hack = { path = "../workspace_hack" }
time = "0.3.41"

