[package]
name = "server"
version.workspace = true
edition.workspace = true
description = "The server component of the rusty-flash-knowledge API project."
readme.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
# Telemetry
tracing = "0.1"
tracing-bunyan-formatter = "0.3"
tracing_log_error = { version = "0.1" }
tracing-panic = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "registry",
    "smallvec",
    "std",
    "tracing-log",
] }

# Configuration
dotenvy = "0.15"

anyhow = "1"
pavex = { version = "0.1.80" }
tokio = { version = "1", features = ["full"] }
server_sdk = { path = "../server_sdk" }
app = { path = "../app" }
workspace_hack = { path = "../workspace_hack" }

[dev-dependencies]
chrono = { version = "0.4.40", features = [ "serde" ] }
reqwest = "0.12"
sqlx = { version = "0.8.3", features = [ "runtime-tokio", "tls-rustls", "migrate", "uuid", "macros", "chrono", "postgres" ] }
uuid = { version = "1.16.0", features = ["v4", "serde" ] }
